--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.25.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
