--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
+    "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
