--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
     "start": "concurrently \"npm run dev\" \"npm run server\"",
-    "server": "json-server --watch db.json --port 3001"
+    "server": "json-server --watch db.json --port 3001",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist/stats.html",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.5.0",
     "@react-oauth/google": "^0.12.2",
     "antd": "^5.25.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
