--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
-    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "start": "concurrently --names \"BACKEND,FRONTEND\" --prefix-colors \"blue,green\" \"npm run be:win\" \"npm run fe\"",
+    "start:unix": "concurrently \"npm run be\" \"npm run fe\"",
+    "be": "cd ferticare-back && ./mvnw spring-boot:run",
+    "be:win": "cd ferticare-back && mvnw.cmd spring-boot:run",
+    "be:clean": "cd ferticare-back && ./mvnw clean spring-boot:run",
+    "be:clean:win": "cd ferticare-back && mvnw.cmd clean spring-boot:run",
+    "fe": "vite --open",
     "server": "json-server --watch db.json --port 3001",
-    "build:analyze": "npm run build && npx vite-bundle-analyzer dist/stats.html",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
@@ -19,6 +24,7 @@
     "@react-oauth/google": "^0.12.2",
     "antd": "^5.25.4",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.6",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
@@ -36,12 +42,14 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "concurrently": "^9.1.2",
+    "concurrently": "^9.2.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "json-server": "^1.0.0-beta.3",
-    "vite": "^6.3.5"
+    "npm-run-all": "^4.1.5",
+    "vite": "^6.3.5",
+    "wait-on": "^8.0.3"
   }
 }
