--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
