--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
